# custom-wayland-compositor

./: .gitignore  APPLICATION_DEVELOPMENT_WORKFLOW.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT_DIARY.md  LIVE_DEPLOYMENT_GUIDE.md  README.md  TESTING.md  WHAT_TO_EXPECT.md  features.md  test_client.py  test_deployment.sh
.github/: copilot-instructions.md
crates/compositor-core/: Cargo.toml
crates/compositor-core/src/: backend.rs  lib.rs  session.rs  wayland.rs
crates/compositor-core/src/tests/: mod.rs
crates/compositor-core/tests/: protocol_validation.rs
crates/config/src/: lib.rs
crates/test-clients/clipboard_copier/: Cargo.toml
crates/test-clients/clipboard_copier/src/: main.rs
crates/test-clients/clipboard_paster/: Cargo.toml
crates/test-clients/clipboard_paster/src/: main.rs
crates/test-clients/dmabuf_explicit_sync/: Cargo.toml
crates/test-clients/dmabuf_explicit_sync/src/: main.rs
crates/test-clients/dmabuf_import_render/: Cargo.toml
crates/test-clients/dmabuf_import_render/src/: main.rs
crates/test-clients/fractional_scale_tester/: Cargo.toml
crates/test-clients/fractional_scale_tester/src/: main.rs
crates/test-clients/keyboard_events_logger/: Cargo.toml
crates/test-clients/keyboard_events_logger/src/: main.rs
crates/test-clients/pointer_constraints_test/: Cargo.toml
crates/test-clients/pointer_constraints_test/src/: main.rs
crates/test-clients/pointer_events_logger/: Cargo.toml
crates/test-clients/pointer_events_logger/src/: main.rs
crates/test-clients/relative_pointer_test/: Cargo.toml
crates/test-clients/relative_pointer_test/src/: main.rs
crates/test-clients/shm_basic_window/: Cargo.toml
crates/test-clients/shm_basic_window/src/: main.rs
crates/test-clients/ssd_decoration_tester/: Cargo.toml
crates/test-clients/ssd_decoration_tester/src/: main.rs
crates/test-clients/surface_damage_frame/: Cargo.toml
crates/test-clients/surface_damage_frame/src/: main.rs
crates/test-clients/viewporter_scaling/: Cargo.toml
crates/test-clients/viewporter_scaling/src/: main.rs
crates/test-clients/xdg_shell_interactions/: Cargo.toml
crates/test-clients/xdg_shell_interactions/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  logging.rs  logging_macros.rs
crates/vulkan-renderer/src/: compositor_pipeline.rs  compositor_renderer.rs  device.rs  instance.rs  lib.rs  surface_pipeline.rs  surface_renderer.rs
livetest/: PHASE4_STATUS_AND_NEXT_STEPS.md  PHASE5_REAL_APP_STATUS_AND_NEXT_STEPS.md  PHASE5_REAL_APP_TEST_PLAN.md  README.md  SYSTEMATIC_TESTING_GUIDE.md  TESTING_STRATEGY.md  VALIDATION_STATUS.md  phase1_foundation.sh  phase2_graphics_stack.sh  phase3_advanced_protocols.sh  phase5_desktop_integration.sh  phase5_professional_apps.sh  run_all_tests.sh
livetest/custom_tests/: advanced_visuals_design.md  advanced_visuals_results.md  core_windowing_design.md  core_windowing_results.md  data_transfer_design.md  data_transfer_results.md  dmabuf_sync_design.md  dmabuf_sync_results.md  input_handling_design.md  input_handling_results.md
scripts/: analyze_logs.sh  test_compositor.sh
src/: main.rs
