[package]
name = "clipboard_paster"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.30"
# wayland-protocols = { version = "0.30", features = ["unstable_protocols"] } # As with copier, data device manager is usually core.

# libc = "0.2" # For O_CLOEXEC with pipe2 if not using std::os::unix::net::UnixStream::pair or similar for pipe
# tempfile = "3" # For SHM window background
# clap = { version = "4.0", features = ["derive"], optional = true } # For --trigger CLI arg
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
