[package]
name = "dmabuf_explicit_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.30"
wayland-protocols = { version = "0.30", features = ["unstable_protocols"] } # For zwp_linux_dmabuf_v1, zwp_linux_explicit_sync_v1

# Potential dependencies for DMA-BUF creation and sync file fds
# libc = "0.2" # For syscalls if directly creating sync files or basic DRM ioctls
# smithay-drm-extras = "0.1" # If using something like gbm-rs from smithay ecosystem for GBM
# Minimal graphics library or direct syscalls for sync files.
# For now, these are commented out. Implementer will choose based on design.

# clap = { version = "4", features = ["derive"] } # For CLI argument parsing
# once_cell = "1"
# parking_lot = "0.12"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
