[package]
name = "dmabuf_import_render"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.30"
wayland-protocols = { version = "0.30", features = ["unstable"] } # For zwp_linux_dmabuf_v1

# Potential dependencies for DMA-BUF creation (to be decided by implementer based on design doc options)
# libc = "0.2" # For syscalls if directly creating sync files or basic DRM ioctls
# smithay-drm-extras = "0.1" # If using something like gbm-rs from smithay ecosystem for GBM
# Consider a minimal graphics library like `gbm` or a tiny Vulkan helper for buffer allocation.
# For now, these are commented out; the primary focus is Wayland interaction.
# The implementer might choose to have FDs passed via CLI initially.

# clap = { version = "4", features = ["derive"] } # For CLI argument parsing
# once_cell = "1"
# parking_lot = "0.12"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
