[package]
name = "fractional_scale_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.30"
wayland-protocols = { version = "0.30", features = ["unstable_protocols"] } # For wp_fractional_scale_v1

# tempfile = "3" # For SHM window background
# clap = { version = "4.0", features = ["derive"] } # For CLI args like --scale
# image = "0.24" # Example if creating complex patterns for visual scaling checks
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
