[package]
name = "pointer_events_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.30"
# No special protocol extensions needed for basic wl_pointer
# Consider adding `input-event-codes` or similar if mapping raw button codes to names,
# but for logging, raw codes are often sufficient for initial tests.
# tempfile = "3" # For SHM window background
# clap = { version = "4", features = ["derive"] } # For CLI args like --duration
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
