[package]
name = "ssd_decoration_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.30"
wayland-protocols = { version = "0.30", features = ["unstable"] } # For xdg_decoration_unstable_v1

# tempfile = "3" # For SHM window background
# clap = { version = "4.0", features = ["derive"] } # For CLI args like --mode
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
