[package]
name = "surface_damage_frame"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.30" # Matches the version used in the main project
# tempfile = "3"
# clap = { version = "4", features = ["derive"] }
# once_cell = "1"
# parking_lot = "0.12"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
